# external_libssh2

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  lookaside.txt
resources/: pkg-config.in
resources/libssh2_cmake/: CMakeLists.txt
resources/libssh2_cmake/include_android_armeabi_gcc/: libssh2_config.h
resources/libssh2_cmake/include_linux_amd64_gcc/: libssh2_config.h
resources/libssh2_cmake/include_macosx_amd64_clang/: libssh2_config.h
resources/libssh2_cmake/include_windows_amd64_msvc/: libssh2_config.h
test/: CMakeLists.txt  libssh2_test.cpp
